--- a/ops/plugins/generic/lucene/locale/en_US/locale.xml
+++ b/ops/plugins/generic/lucene/locale/en_US/locale.xml
@@ -77,7 +77,7 @@
 	]]></message>
 	<message key="plugins.generic.lucene.settings.dictionaryRebuild">Rebuild dictionaries</message>
 	<message key="plugins.generic.lucene.settings.faceting">Faceting (display a navigation box with additional filters to refine your search)</message>
-	<message key="plugins.generic.lucene.settings.facetingSelectCategory">You may select specific facet categories</message>
+	<message key="plugins.generic.lucene.settings.facetingSelectCategory">You may select specific facet categories (the corresponding metadata must have beeen selected for indexing in journal setup, step 3.4)</message>
 	<message key="plugins.generic.lucene.settings.featureDescription"><![CDATA[
 		The Lucene plugin provides several optional search features. Most of these features are enabled by default but can be disabled or fine-tuned.
 	]]></message>
